--- a/res/layout/activity_where.xml
+++ b/res/layout/activity_where.xml
@@ -28,7 +28,33 @@
 	    android:id="@+id/customer_spinner"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	     android:layout_marginBottom="10dp" />
+	    android:layout_marginBottom="10dp" />
+
+    <TextView
+        android:id="@+id/where_txt_customer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/where_txt_customer"
+        android:layout_marginBottom="10dp" />
+    
+    <EditText android:id="@+id/where_edit_customer"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="10dp"
+		android:inputType="text" />
+    
+    <TextView
+        android:id="@+id/where_txt_mileage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/where_txt_mileage"
+        android:layout_marginBottom="10dp" />
+    
+    <EditText android:id="@+id/where_edit_mileage"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="10dp"
+		android:inputType="text" />
     
     <Button
        android:id="@+id/where_go"
