--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,43 +17,17 @@
        android:layout_marginBottom="10dp"
        android:onClick="gotoWhen" />
    
-   <Button
-       android:id="@+id/who_steve"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="@string/who_steve"
-       android:layout_marginBottom="10dp"
-       android:onClick="gotoWhen" />
+   <Spinner
+	    android:id="@+id/who_operator"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginBottom="10dp" />
    
    <Button
-       android:id="@+id/who_kevin"
+       android:id="@+id/who_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="@string/who_kevin"
-       android:layout_marginBottom="10dp"
-       android:onClick="gotoWhen" />
-   
-   <Button
-       android:id="@+id/who_michelle"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="@string/who_michelle"
-       android:layout_marginBottom="10dp"
-       android:onClick="gotoWhen" />
-   
-   <Button
-       android:id="@+id/who_brian"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="@string/who_brian"
-       android:layout_marginBottom="10dp"
-       android:onClick="gotoWhen" />
-   
-   <Button
-       android:id="@+id/who_eric"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="@string/who_eric"
+       android:text="@string/who_next"
        android:layout_marginBottom="10dp"
        android:onClick="gotoWhen" />
 
